public/stylesheets/style.css
img {
    width: 10%;
    height: auto;
}

body {
    height: 100vh;
    margin: 0;
    padding: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

h1, h2, h3, p, ul {
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
}

.auth-page {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 50%;
    gap: 16px;
}

.auth-form {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.auth-form > input {
    height: 20px;
}

.auth-form > button[type='submit'] {
    align-self: center;
}

.errors {
    display: flex;
    flex-direction: column;
}

.auth-errors {
    align-items: center;
}

.errors > ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.top-bar {
    padding: 8px;
}

.main {
    display: flex;
    flex-direction: column;
    padding: 8px;
    gap: 16px;
}

.info {
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.top-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.user-info {
    display: flex;
    flex-direction: column;
    align-items: end;
}

.folder, .file {
    display: grid;
}

.item-list {
    display: flex;
    flex-direction: column;
    list-style:none;
    padding: 8px;
    gap: 8px;
}

